Portfolio alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,7 @@
   background: #333 !important; /* Active dot color */
 }
 
-.isotope{
-  margin-left: 10% !important;
-}
+
 .dropdown-toggle::after {
   display: inline-block;
   margin-left: .255em;
